k8s/kustomize/blog/overlays/cluster2/ingress-prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-prod
  annotations:
    nginx.ingress.kubernetes.io/canary: "false"
    nginx.ingress.kubernetes.io/load-balance: round_robin
spec:
  ingressClassName: nginx
  rules:
  - host: local.blog
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blog
            port:
              number: 80
